# S1-Satellite-Categorizer

./: Makefile  README.md
data/: satellites.csv
src/: CMakeLists.txt  controller.c  controller.h  displayer.c  displayer.h  hashmap.c  hashmap.h  list.h  main.c  satellite.c  satellite.h  vector.c  vector.h
